--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
               <span class="favorite-icon-heart">12</span>
             </a>
           </li>
+          <li class="navigation-user-item">
+            <a class="header-button" href="#">Хочу сюда!</a>
+          </li>
+
         </ul>
-        <a class="header-button" href="#">Хочу сюда!</a>
       </nav>
     </header>
 
@@ -47,20 +50,20 @@
     <main class="main-container main-index">
       <div class="page-container">
         <section class="hero">
-          <h1 class="visualy-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
+          <h1 class="visually-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
           <img class="hero-img" src="images/welcome.svg" width="458" height="352"
             alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
         </section>
         <section class="advantages">
           <!-- Преимущества и туристические плюшки-->
-          <h2 class="visualy-hidden">Преимущества</h2>
-          <p class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <h2 class="visually-hidden">Преимущества</h2>
+          <p class="tagline">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</p>
+          <p class="slogan">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-item-blue">
               <div class="index-columns">
-                <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <h3 class="advantages-title-blue">Настоящий <br>городок</h3>
+                <p class="advantages-desc-blue">Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
               </div>
               <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
                 alt="Гостиничные дома с цветущими кустарниками на фоне гор">
@@ -68,54 +71,54 @@
             <div class="advantages-item-container">
               <li class="advantages-item-square">
                 <div class="advantages-wrapper">
-                  <h3 class="advantages-title">Небольшая площадь</h3>
-                  <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
+                  <h3 class="advantages-title-square">Небольшая <br>площадь</h3>
+                  <p class="advantages-desc-square">Все достопримечательности <br>находятся очень близко</p>
                 </div>
               </li>
               <li class="advantages-item-road">
                 <div class="advantages-wrapper">
-                  <h3 class="advantages-title">Красивая дорога</h3>
-                  <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                  <h3 class="advantages-title-road">Красивая <br>дорога</h3>
+                  <p class="advantages-desc-road">Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
                 </div>
               </li>
               <li class="advantages-item-tourism">
                 <div class="advantages-wrapper">
-                  <h3 class="advantages-title">Мало туристов</h3>
-                  <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
+                  <h3 class="advantages-title-tourism">Мало <br>туристов</h3>
+                  <p class="advantages-desc-tourism">Большинство едет в Гранд <br>Каньон и толпится там</p>
                 </div>
               </li>
             </div>
             <li class="advantages-item-blue">
               <div class="index-columns">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
-                <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                <h3 class="advantages-title">Там есть <br>мост дьявола</h3>
+                <p class="advantages-desc">Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
               </div>
               <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
                 alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
             </li>
           </ul>
           <!-- Приезжайте -->
-          <h2 class="visualy-hidden">Приезжайте</h2>
-          <p class="tagline">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-          <p>Опытный персонал и качественное обслуживание!</p>
+          <h2 class="visually-hidden">Приезжайте</h2>
+          <p class="tagline">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</p>
+          <p class="invitation">Опытный персонал и качественное обслуживание!</p>
           <!-- Приглашение и инфраструктура -->
           <ul class="infrastructure-list">
             <li class="infrastructure-item-hotel infrastructure-item-hotel-icon">
               <div class="infrastructure-wrapper">
                 <h3 class="infrastructure-title">Жильё</h3>
-                <p class="infrastructure-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <p class="infrastructure-desc">Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
               </div>
             </li>
             <li class="infrastructure-item-burger infrastructure-item-burger-icon">
               <div class="infrastructure-wrapper">
                 <h3 class="infrastructure-title">Еда</h3>
-                <p class="infrastructure-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                <p class="infrastructure-desc">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
               </div>
             </li>
             <li class="infrastructure-item-gift infrastructure-item-gift-icon">
               <div class="infrastructure-wrapper">
                 <h3 class="infrastructure-title">Сувениры</h3>
-                <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+                <p class="infrastructure-desc">Не только китайского, <br>но и настоящего местного <br>производства!</p>
               </div>
             </li>
           </ul>
@@ -123,21 +126,19 @@
         <!-- Поиск гостиниц и подписка -->
         <section class="search">
           <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+          <p class="search-desc">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в
             Седоне</p>
           <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
         </section>
         <!--Рассылка-->
         <section class="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe-desc">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
-            <p class="subscribe-form-name">
-              <label class="visually-hidden" for="email">
-                <span class="visually-hidden">Введите ваш e-mail</span>
-                <input id="email" type="email" placeholder="Ваш e-mail" name="email">
-              </label>
-            </p>
+            <label class="subscribe-field-label" for="email">
+              <span class="visually-hidden">Введите ваш e-mail</span>
+              <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
+            </label>
             <button class="button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
