--- a/index.html
+++ b/index.html
@@ -56,51 +56,58 @@
         </section>
         <section class="advantages">
           <!-- Преимущества и туристические плюшки-->
-          <h2 class="visually-hidden">Преимущества</h2>
-          <p class="tagline">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</p>
+          <h2 class="tagline">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
           <p class="slogan">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
-            <li class="advantages-item-blue">
-              <h3 class="advantages-title-blue">Настоящий <br>городок</h3>
-              <p class="advantages-desc-blue">Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
+            <li class="advantages-item advantages-item-full">
+              <div class="advantages-item-wrapper">
+                <h3>Настоящий <br>городок</h3>
+                <p>Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
+              </div>
               <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
                 alt="Гостиничные дома с цветущими кустарниками на фоне гор">
             </li>
-            <li class="advantages-item-square">
-              <h3 class="advantages-title-square">Небольшая <br>площадь</h3>
-              <p class="advantages-desc-square">Все достопримечательности <br>находятся очень близко</p>
+            <li class="advantages-item advantages-item-light-blue">
+              <h3>Небольшая <br>площадь</h3>
+              <p>Все достопримечательности <br>находятся очень близко</p>
             </li>
-            <li class="advantages-item-road">
-              <h3 class="advantages-title-road">Красивая <br>дорога</h3>
-              <p class="advantages-desc-road">Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
+            <li class="advantages-item advantages-item-blue">
+              <h3>Красивая <br>дорога</h3>
+              <p>Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
             </li>
-            <li class="advantages-item-tourism">
-              <h3 class="advantages-title-tourism">Мало <br>туристов</h3>
-              <p class="advantages-desc-tourism">Большинство едет в Гранд <br>Каньон и толпится там</p>
+            <li class="advantages-item advantages-item-light-blue">
+              <h3>Мало <br>туристов</h3>
+              <p>Большинство едет в Гранд <br>Каньон и толпится там</p>
             </li>
-            <li class="advantages-item-blue">
-              <h3 class="advantages-title-blue">Там есть <br>мост дьявола</h3>
-              <p class="advantages-desc-blue">Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
+            <li class="advantages-item advantages-item-full">
+              <div class="advantages-item-wrapper">
+                <h3>Там есть <br>мост дьявола</h3>
+                <p>Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
+              </div>
               <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
                 alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
             </li>
           </ul>
-          <!-- Приезжайте -->
-          <h2 class="visually-hidden">Приезжайте</h2>
-          <p class="tagline">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</p>
+        </section>
+        <!-- Приезжайте -->
+        <section class="infrastructure">
+          <h2 class="tagline">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</h2>
           <p class="invitation">Опытный персонал и качественное обслуживание!</p>
           <!-- Приглашение и инфраструктура -->
           <ul class="infrastructure-list">
             <li class="infrastructure-item-hotel infrastructure-item-hotel-icon">
               <div class="infrastructure-wrapper">
                 <h3 class="infrastructure-title">Жильё</h3>
-                <p class="infrastructure-desc">Рекомендуем пожить <br>в настоящем мотеле, <br>всё как в кино!</p>
+                <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить <br>в настоящем мотеле,
+                  <br>всё как в кино!
+                </p>
               </div>
             </li>
             <li class="infrastructure-item-burger infrastructure-item-burger-icon">
               <div class="infrastructure-wrapper">
                 <h3 class="infrastructure-title">Еда</h3>
-                <p class="infrastructure-desc">Всегда заказывайте <br>топовый фирменный бургер, вы не разочаруетесь!</p>
+                <p class="infrastructure-desc infrastructure-desc-icon">Всегда заказывайте <br>топовый фирменный бургер,
+                  вы не разочаруетесь!</p>
               </div>
             </li>
             <li class="infrastructure-item-gift infrastructure-item-gift-icon">
@@ -139,16 +146,31 @@
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <a class="footer-social-link" href="#">
+              <svg width="24" height="14" viewBox="0 0 24 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-link" href="https://t.me/htmlacademy">
+              <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-link" href="#">
+              <svg width="22" height="17" viewBox="0 0 22 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z"
+                  fill="#83B3D3" />
+              </svg>
               <span class="visually-hidden">YouTube</span>
             </a>
           </li>
@@ -157,12 +179,12 @@
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-        <a class="copyright" href="https://htmlacademy.ru/">
-          <span class="visually-hidden">Сделано в HTML Academy</span>
-          <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33"
-            alt="Логотип HTML Academy">
-        </a>
       </section>
+      <a class="copyright" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">Сделано в HTML Academy</span>
+        <img class="htmlacademy-logo" src="images/logo-html-academy.svg" width="115" height="33"
+          alt="Логотип HTML Academy">
+      </a>
     </footer>
   </body>
 
