--- a/index.html
+++ b/index.html
@@ -48,96 +48,90 @@
 
     <!-- Приветственный блок -->
     <main class="main-container main-index">
-      <div class="page-container">
-        <section class="hero">
-          <h1 class="visually-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
-          <img class="hero-img" src="images/welcome.svg" width="458" height="352"
-            alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
-        </section>
-        <section class="advantages">
-          <!-- Преимущества и туристические плюшки-->
-          <h2 class="tagline">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h2>
-          <p class="slogan">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-          <ul class="advantages-list">
-            <li class="advantages-item advantages-item-full">
-              <div class="advantages-item-wrapper">
-                <h3>Настоящий <br>городок</h3>
-                <p>Седона — не аттракцион для <br>туристов, там течёт своя <br>жизнь</p>
-              </div>
-              <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
-                alt="Гостиничные дома с цветущими кустарниками на фоне гор">
-            </li>
-            <li class="advantages-item advantages-item-light-blue">
-              <h3>Небольшая <br>площадь</h3>
-              <p>Все достопримечательности <br>находятся очень близко</p>
-            </li>
-            <li class="advantages-item advantages-item-blue">
-              <h3>Красивая <br>дорога</h3>
-              <p>Ехать в Седону из Лас-Вегаса <br>совсем не скучно!</p>
-            </li>
-            <li class="advantages-item advantages-item-light-blue">
-              <h3>Мало <br>туристов</h3>
-              <p>Большинство едет в Гранд <br>Каньон и толпится там</p>
-            </li>
-            <li class="advantages-item advantages-item-full">
-              <div class="advantages-item-wrapper">
-                <h3>Там есть <br>мост дьявола</h3>
-                <p>Да, по нему можно пройти! <br>Если вы осмелитесь, <br>разумеется</p>
-              </div>
-              <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
-                alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
-            </li>
-          </ul>
-        </section>
-        <!-- Приезжайте -->
-        <section class="infrastructure">
-          <h2 class="tagline">Приезжайте в Седону отдохнуть <br>в комфорте и уюте!</h2>
-          <p class="invitation">Опытный персонал и качественное обслуживание!</p>
-          <!-- Приглашение и инфраструктура -->
-          <ul class="infrastructure-list">
-            <li class="infrastructure-item-hotel infrastructure-item-hotel-icon">
-              <div class="infrastructure-wrapper">
-                <h3 class="infrastructure-title">Жильё</h3>
-                <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить <br>в настоящем мотеле,
-                  <br>всё как в кино!
-                </p>
-              </div>
-            </li>
-            <li class="infrastructure-item-burger infrastructure-item-burger-icon">
-              <div class="infrastructure-wrapper">
-                <h3 class="infrastructure-title">Еда</h3>
-                <p class="infrastructure-desc infrastructure-desc-icon">Всегда заказывайте <br>топовый фирменный бургер,
-                  вы не разочаруетесь!</p>
-              </div>
-            </li>
-            <li class="infrastructure-item-gift infrastructure-item-gift-icon">
-              <div class="infrastructure-wrapper">
-                <h3 class="infrastructure-title">Сувениры</h3>
-                <p class="infrastructure-desc">Не только китайского, <br>но и настоящего местного <br>производства!</p>
-              </div>
-            </li>
-          </ul>
-        </section>
-        <!-- Поиск гостиниц и подписка -->
-        <section class="search">
-          <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-desc">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в
-            Седоне</p>
-          <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
-        </section>
-        <!--Рассылка-->
-        <section class="subscribe">
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-          <p class="subscribe-desc">Только полезная информация и никакого спама, <br>честное бойскаутское!</p>
-          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
-            <label class="subscribe-field-label" for="email">
-              <span class="visually-hidden">Введите ваш e-mail</span>
-              <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
-            </label>
-            <button class="button-subscribe" type="submit">Подписаться</button>
-          </form>
-        </section>
-      </div>
+
+      <section class="hero">
+        <h1 class="visually-hidden">Добро пожаловать в Седону, в городок в Аризоне</h1>
+        <img class="hero-img" src="images/welcome.svg" width="458" height="352"
+          alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks!">
+      </section>
+      <section class="advantages">
+        <!-- Преимущества и туристические плюшки-->
+        <h2 class="tagline">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="slogan">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ul class="advantages-list">
+          <li class="advantages-item advantages-item-full">
+            <div class="advantages-item-wrapper">
+              <h3>Настоящий городок</h3>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <img class="advantages-img" src="images/advantages-hotel.jpg" width="800" height="385"
+              alt="Гостиничные дома с цветущими кустарниками на фоне гор">
+          </li>
+          <li class="advantages-item advantages-item-light-blue">
+            <h3>Небольшая площадь</h3>
+            <p>Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item advantages-item-blue">
+            <h3>Красивая дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item advantages-item-light-blue">
+            <h3>Мало туристов</h3>
+            <p>Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item advantages-item-full">
+            <div class="advantages-item-wrapper">
+              <h3>Там есть мост дьявола</h3>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <img class="advantages-img" src="images/advantages-bridge.jpg" width="800" height="385"
+              alt="Каньон Оук-Крик на фоне долины и Мост дьявола">
+          </li>
+        </ul>
+      </section>
+      <!-- Приезжайте -->
+      <section class="infrastructure">
+        <h2 class="tagline">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+        <p class="invitation">Опытный персонал и качественное обслуживание!</p>
+        <!-- Приглашение и инфраструктура -->
+        <ul class="infrastructure-list">
+          <li class="infrastructure-item infrastructure-item-hotel">
+            <h3 class="infrastructure-title">Жильё</h3>
+              <p class="infrastructure-desc infrastructure-desc-icon">Рекомендуем пожить в настоящем мотеле,
+                всё как в кино!
+              </p>
+
+          </li>
+          <li class="infrastructure-item infrastructure-item-burger">
+              <h3 class="infrastructure-title">Еда</h3>
+              <p class="infrastructure-desc infrastructure-desc-icon">Всегда заказывайте топовый фирменный бургер,
+                вы не разочаруетесь!</p>
+          </li>
+          <li class="infrastructure-item infrastructure-item-gift">
+              <h3 class="infrastructure-title">Сувениры</h3>
+              <p class="infrastructure-desc">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <!-- Поиск гостиниц и подписка -->
+      <section class="search">
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+          Седоне</p>
+        <a class="search-button" href="#">Поиск гостиницы в Седоне</a>
+      </section>
+      <!--Рассылка-->
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="get">
+          <label class="subscribe-field-label" for="email">
+            <span class="visually-hidden">Введите ваш e-mail</span>
+            <input class="subscribe-field" id="email" type="email" placeholder="Ваш e-mail" name="email" required>
+          </label>
+          <button class="button-subscribe" type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
     <!-- Подвал -->
     <footer class="page-footer page-container">
